Fixed alignment
Issue resolved: #4005

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1705,6 +1705,7 @@ body.dark-mode .pricing-card button {
   position: relative;
   overflow: hidden;
   border: 2px solid #ccc; /* Optional styling */
+ margin-left: 20px;
 }
 
 .map-container iframe {
@@ -1810,16 +1811,17 @@ body.dark-mode .pricing-card button {
 
 .flex-container {
   flex: 1; /* Takes up the left side space */
-  margin-right: 20px; /* Adds space between the contact details and map */
+  margin-right: 10px; /* Adds space between the contact details and map */
   padding-top:50px;
+  margin-left: 10px;
   padding-left:40px;
 }
 
 .map-container {
-  width: 100%;
+  width: 50%;
   max-width: 400px; /* Keeps the map responsive */
   aspect-ratio: 1; /* Ensures a square aspect ratio */
-  margin: 20px 0;
+  margin: 20px 18px;
   overflow: hidden;
   border-radius: 10px;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
